@@ -1,0 +1,5 @@
+container:  "ddd"
+
+rule aaa:
+    params:
+        container = "foo10"
