@@ -1,0 +1,6 @@
+envvars:
+    "SOME_VARIABLE"
+
+rule aaa:
+    params:
+        envvars = "foo10"
